Fixed commenting and spacing

--- a/react-ui/src/components/Layouts/InputWorkerTimes/WorkerInputpage.css
+++ b/react-ui/src/components/Layouts/InputWorkerTimes/WorkerInputpage.css
@@ -1,12 +1,6 @@
 
-/* .SelectSchools{
-    position: absolute;
-    top: 80px;
-    right: 100px;
-    width: 10%;
-} */
 
- /*  .SelectSchoolsLabel{
+.SelectSchoolsLabel{
  padding: 12px 20px;
   margin-top:4px;
   margin-bottom:4px;
@@ -19,7 +13,7 @@
   padding-bottom:3px;
 
   
-}  */
+}  
  
 
  .wraper{
